<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalapp.FirstAlbumActivity">

    <TextView
        style="@style/LinerTheme"
        android:background="@color/red400"
        android:text="@string/firstType1" />

    <TextView
        style="@style/LinerTheme"
        android:background="@color/red300"
        android:text="@string/firstType2" />

    <TextView
        style="@style/LinerTheme"
        android:background="@color/red400"
        android:text="@string/firstType3" />

    <TextView
        style="@style/LinerTheme"
        android:background="@color/red300"
        android:text="@string/firstType4" />

    <TextView
        style="@style/LinerTheme"
        android:background="@color/red400"
        android:text="@string/firstType5" />

    <Button
        android:id="@+id/NextPage"
        style="@style/LinerTheme"
        android:text="@string/nextAlbum" />
</LinearLayout>